--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}"/>
+    </style>
 </head>
 <body class="home_body">
     <div class="home_div">
         <h1 class="home_h1">Personal Record Manager</h1>
-        <button class="home_button1"><a href="{{url_for('register')}}">Register</a></button>
-        <button class="home_button2"><a href="{{url_for('login')}}">Login</a></button><br/><br/>
-        <label class="home_label">About</label>
-        <h5 class="home_h5">You write anything you want and also you can update, delete and save your text</h5>
+        <div style="margin: 2%;">
+            <button class="home_button1"><a href="{{url_for('register')}}">Register</a></button>
+        <button class="home_button2"><a href="{{url_for('login')}}">Login</a></button>
+        </div>
+        <label class="home_label"><strong>About</strong></label>
+        <h5 class="home_h5">Feel free to write anything you like, and you can also <br>update, delete, and save your text as necessary. Additionally, you have the ability to save your notes and files, and download them.</h5>
     </div>
 </body>
 </html>
