--- a/templates/login.html
+++ b/templates/login.html
@@ -23,8 +23,7 @@
             <input type="password" name="password" class="home_input" placeholder="Enter your Password"/>
             <button class="reg_button">Login</button>
         </form>
-        <div class="login_acc">
-            <a href="#"id="login_acc">Forget Password</a>
+        <div style="display: flex; justify-content: center;">
             <p id="login_ac1">No account? <a href="{{url_for('register')}}" style="text-decoration: none; color: black;">Signup</a></p>
         </div>
     </div>
