--- a/templates/home.html
+++ b/templates/home.html
@@ -1,37 +1,91 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Add Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" />
     {% block addcss %}{% endblock %}
-        <style>
+    <style>
         .navbar .form-inline {
             display: flex;
             justify-content: flex-end;
         }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        table,
+        th,
+        td {
+            border: 1px solid #ddd;
+        }
+
+        th,
+        td {
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        /* Navbar styling */
+        .navbar {
+            background-color: #F5F7FA;
+            /* Light background color for the navbar */
+        }
+
+        .navbar-nav .nav-item .nav-link {
+            font-weight: bold;
+            color: black;
+            /* Make nav item text bold */
+        }
+
+        .navbar-nav .nav-item .nav-link:hover {
+            background-color: #e1e3ff;
+            /* Light purple background on focus */
+            color: #6a5aff;
+            /* Dark purple text color on focus */
+            outline: none;
+            /* Remove default focus outline */
+            border-radius: 4px;
+            /* Optional: rounded corners */
+
+            /* Dark purple color on hover */
+        }
+
+        .navbar-brand {
+            font-weight: bold;
+            /* Make brand text bold */
+        }
+
+        /* Ensure navbar dropdown menu items are bold as well */
+        .dropdown-menu .dropdown-item {
+            font-weight: bold;
+            /* Make dropdown items bold */
+        }
     </style>
     <title>home Page</title>
-    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" />
 </head>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    {% for message in messages %}
-      <p class="flash">{{ message }}</p>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
+
 <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#" style="color: red;">PRM</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="notesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="notesDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         Notes
                     </a>
                     <div class="dropdown-menu" aria-labelledby="notesDropdown">
@@ -42,7 +96,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="notesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="notesDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         Files
                     </a>
                     <div class="dropdown-menu" aria-labelledby="notesDropdown">
@@ -50,6 +105,11 @@
                         <a class="dropdown-item" href="{{url_for('uploadfile')}}">Add file</a>
                     </div>
                 </li>
+                <form class="form-inline" method="POST" action="{{url_for('search')}}">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+                        name="search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -59,14 +119,17 @@
                     <a class="nav-link" href="{{url_for('logout')}}">logout</a>
                 </li>
             </ul>
-            <form class="form-inline" method="POST" action="{{url_for('search')}}">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     {% block content %}
-    <br/>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <p class="flash">{{ message }}</p>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+    <br />
     <table>
         <thead>
             <tr>
@@ -79,7 +142,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for i in items%} 
+            {% for i in items%}
             <tr>
                 <td>{{i[0]}}</td>
                 <td>{{i[1]}}</td>
@@ -90,10 +153,11 @@
             {% endfor %}
         </tbody>
     </table>
-    {%  endblock %} 
+    {% endblock %}
     <!-- Add Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
